--- a/index.html
+++ b/index.html
@@ -2,8 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Gustavo Honorato - Backend Software Engineer Portfolio. Specializing in Python and Go development with experience in scalable solutions." />
+    <meta name="keywords" content="backend engineer, software engineer, python, golang, portfolio" />
+    <meta name="author" content="Gustavo Honorato" />
+    <meta name="theme-color" content="#6366f1" />
     <title>Gustavo Honorato - Backend Software Engineer</title>
   </head>
   <body>
